--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html>
 	<head>
 		<title>Velocity Graph</title>
+		<style type="text/css">
+			body { font-family: sans-serif; background-color: #f2f2f2; padding: 100px; text-align: center; }
+			.item { margin: 0; display: inline-block; background-color: #fff; border: 1px solid #ccc; border-radius: 3px; }
+			.item * { padding: 5px; }
+			.item .label { background-color: #f2f2f2; border-top: 1px solid #ccc; color: #666; }
+		</style>
 	</head>
 	<body>
-
+	
+		<div id="svg" class="item"l>
+			<div class="graph"></div>
+			<div class="label">SVG</div>
+		</div>
+		<div id="canvas" class="item"l>
+			<div class="graph"></div>
+			<div class="label">Canvas</div>
+		</div>
+		<div id="image" class="item"l>
+			<div class="graph"></div>
+			<div class="label">Image</div>
+		</div>
+		
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/canvg/dist/canvg.min.js"></script>
-		<script type="text/javascript" src="scom.js"></script>
 		<script type="text/javascript">
 
 			Array.prototype.getHeightest = function() {
@@ -74,7 +92,7 @@
 				var text = drawName('SCOM');
 				svg.appendChild(text);
 
-				document.body.appendChild(svg);
+				$('#svg .graph').append(svg);
 			}
 
 			function svgToCanvas() {
@@ -86,34 +104,25 @@
 
 				canvg(canvas, svg.outerHTML);
 
-				document.body.appendChild(canvas);
+				$('#canvas .graph').append(canvas);
 			}
 
 			function canvasToImg() {
 				var canvas = document.getElementsByTagName('canvas')[0];
 		    var dataURL = canvas.toDataURL("image/png");
-		    var img = new Image();
+		    var image = new Image();
 		    var f = 5;
 
-		    img.height = canvas.getAttribute('height');
-				img.width = canvas.getAttribute('width');
-		    img.setAttribute('src', dataURL);	
+		    image.height = canvas.getAttribute('height');
+				image.width = canvas.getAttribute('width');
+		    image.setAttribute('src', dataURL);	
 
-		    document.body.appendChild(img);
-
-		  	// img.height = img.height / f;
-				// img.width = img.width / f;
-				return dataURL;
+		    $('#image .graph').append(image);
 			}
 
 			$(function() {	
 
-				// getBase64FromImageUrl('yosemite-sam.jpg');
-
-				var prices = [];
-				for (var i in data)
-					prices.push(data[i].previous_day_price);
-				prices = prices.filter(function (i) { if (i != undefined) return i; });
+				var prices = [14.65,15,15,14.55,14.2,13.95,13.9,13.8,13.9,13.8,13.55,13.45,13.6,13.65,13.7,13.75,13.75,13.7,13.55,13.35,13,12.95,12.95,12.8,12.7,12.2,12.2,12.15,12.15,12.15,12.1,12.2,12.25,12.55,12.45,12.15,12.15,12.5,12.55,12.65,12.75,12.8,12.85,12.85,12.75,12.65,12.7,12.75,12.95,12.9,12.85,12.7,12.6,12.55,12.55,12.6,12.6,12.6,12.5,12.85,12.9,12.9,12.95,13.15,13.25,13.25,13.2,13.2,13.4,13.2,13.15,12.95,12.75,12.75,12.75,12.75,12.75,12.75,12.8,12.75,12.75,12.7,12.8,12.75,12.8,12.75,12.8,12.9,12.95,12.6,12.5,12.45,12.2,12,12.2,12,12.05,11.95,12,12.1,12.05,12.15,12.3,12.35,12.4,12.55,12.7,12.75,12.75,12.7,12.75,12.95,12.65,12.45,12.45,12.4,12.55,12.65,12.8,12.8,12.8,12.8,12.85,12.85,12.9,12.95,12.9,12.85,12.85,12.8,12.8,12.8,12.8,12.95,13,12.95,13,13,12.95,13,13.05,13.05,13,12.85,12.6,12.6,12.85,12.9,12.85,12.8,12.8,13,13.1,13.1,13.05,13.05,13.05,13.2,13.2,13,13,13.2,13.2,13.2,13.2,13.2,13.2,13.1,13.1,12.85,12.85,12.75,12.75,12.75,12.75,12.45,12.45,12.35,12.35,12.45,12.45,12.4,12.4,12.5,12.5,12.4,12.4,12.35,12.35,12.3,12.3,12.35,12.35,12.45,12.45,12.35,12.35,12.35,12.35,12.6,12.6,12.3,12.3,12.2,12.2,12.1,12.1,12.05,12.05,12.35,12.35,11.9,11.9,11.8,11.8,11.75,11.75,11.8,11.8,11.7,11.7,11.7,11.7,11.7,11.7,11.7,11.7,11.65,11.65,11.65,11.65,11.55,11.55,11.45,11.45,11.4,11.4,11.4,11.4,11.4,11.4,11.55,11.65,11.8,11.7,11.8,11.8,11.75,11.85,11.95,11.45,11.35,11.2,11,11.5,11.85,12.05,12.35,12.45,12.05,12,11.75,11.7,11.5,11.5,11.7,11.65,11.65,11.75,11.7,11.35,11.1,11.05,10.8,10.75,10.85,10.85,10.75,10.85,10.25,10.05,10,9.95,9.85,10];
 
 				plotvgraph(prices);
 
